--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "node src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mirko van Willigenburg",
   "license": "ISC",
   "dependencies": {
+    "@mediamonks/display-temple": "^6.2.2",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "jszip": "^3.10.0",
     "s3-batch-upload": "^1.5.0",
     "socket.io": "^4.5.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webfontloader": "^1.6.28",
+    "gsap": "file:gsap-bonus.tgz"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
