--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "author": "Mirko van Willigenburg",
   "license": "ISC",
   "dependencies": {
-    "@mediamonks/display-temple": "^6.2.2",
+    "@mediamonks/display-dev-server": "^10.0.5",
+    "@mediamonks/display-temple": "^6.2.3",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
+    "gsap": "file:gsap-bonus.tgz",
     "jszip": "^3.10.0",
     "s3-batch-upload": "^1.5.0",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2",
-    "webfontloader": "^1.6.28",
-    "gsap": "file:gsap-bonus.tgz"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
